<resources>
    <string name="app_name">TrapsNote</string>
    <string name="action_settings">Settings</string>
    <string name="name">Nombre</string>
    <string name="action_register">Enviar Registro</string>
    <string name="accion_sign_in">Iniciar Sesion</string>
    <string name="action_search">Search</string>
    <string name="title_enter_post">Enter</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="Register">TrapsNote</string>
    <string name="Delete">Delete</string>
    <string name="to_Update">Actualizar</string>
    <string name="action_update">Actualizar Ahora</string>
    <string name="Task">TrapsNote</string>
    <string name="Update">Update</string>
    <string name="hint_last_nombre">Apellido</string>
    <string name="Dia">Dia</string>
    <string name="Mes">Mes</string>
    <string name="Year">Year</string>
    <string name="descripcion">Descripcion</string>
    <string name="categoria">Categoria</string>
    <string name="send_task">Guardar</string>
    <string name="numero">Numero de Tarea</string>
    <string name="hint_register">Registrarse</string>
    <string name="Block_task">TrapsNote</string>
    <string name="completado">Completado</string>
    <string name="Logout">TrapsNote</string>
</resources>
