<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:weightSum="1"
    tools:context="com.exam.sid.aplicacion.activities.Main">

    <!-- Este Layout puede que se incluya y puede que no -->

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:elevation="1dp"
        android:text=" Update"
        android:textColor="@android:color/background_light"
        android:textSize="36sp" />

    <!-- Aviso de mensaje -->

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tv_response"
        android:layout_weight="0.10"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:textColor="@android:color/background_light"
        android:background="@android:color/background_dark"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:textSize="20sp" />

        <!-- Nombre de usuario que se desea ejecutar -->

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.05"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/hint_username"
        android:paddingLeft="16px"
        android:textColorHint="@color/colorAccent" />

        <!-- Nombre que se desea cambiar -->

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.05"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/hint_nombre"
        android:paddingLeft="16px"
        android:textColorHint="@color/colorAccent" />

        <!-- Apellido que se desea cambiar -->

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.05"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/hint_last_nombre"
        android:paddingLeft="16px"
        android:textColorHint="@color/colorAccent" />

        <!-- Clave que se desea cambiar -->

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.05"
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="16px"
        android:textColorHint="@color/colorAccent" />

        <!-- Boton de actualizacion -->

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/action_update"
        android:textColor="@android:color/background_light" />

</LinearLayout>